Changes to index.html: Changed section elements to div elements. created divs for landing (welcome), Stanton and Jenna Implemented new JavaScript to dynamically hide/show the different divs, only one will be displayed at any one time. changes to style.css were reverted. added ref to stackoverflow answer fixing issues with dynamic JS.

--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -13,3 +13,6 @@ li button {
 	font-size: 14pt;
 	padding: 10px 20px;
 }
+.body-panel {
+	
+}
